Fixes (sort of) RPU-355 by adjusting which div has the overflow and theming the scrollbar to match the theme.

--- a/sites/all/themes/elx_front/sass/components/h5p/_h5p-iframe.scss
+++ b/sites/all/themes/elx_front/sass/components/h5p/_h5p-iframe.scss
@@ -23,9 +23,13 @@ overflow: auto !important;
 /* Course Presentation is canvas-based, so it scales text proportionately as it resizes
  * We attempt to override this behavior and make it responsive instead.
  */
-.h5p-course-presentation div {
+.h5p-course-presentation .h5p-advancedtext-outer-element {
 	    font-size: 1rem;
 	    overflow: auto !important;
+
+	    &::-webkit-scrollbar-thumb {
+	      background-color: white;
+	    }
 }
 
 .h5p-course-presentation .h5p-interactive-video div {
